added basic layer switcher between two layers, also worked on qgiz project

--- a/my-app/index.html
+++ b/my-app/index.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-  <div id="map" class="map"></div>
+  <div id="map" class="map">
+    <div id="layer-switcher">
+      <input type="checkbox" name="layer" id="WorldMap" value="World_Map" checked>World Map<br>
+      <input type="checkbox" name="layer" id="WorldMap2" value="World_Map2">World Map2<br>
+    </div>
+  </div>
   <div id="popup" class="ol-popup">
     <a href="#" id="popup-closer" class="ol-popup-closer"></a>
     <div id="popup-content"></div>
