layer switcher+singular earnings map + left mouse button onclick event needs fixing with layer switcher setup

--- a/my-app/index.html
+++ b/my-app/index.html
@@ -12,7 +12,8 @@
   <div id="map" class="map">
     <div id="layer-switcher">
       <input type="checkbox" name="layer" id="WorldMap" value="World_Map" checked>World Map<br>
-      <input type="checkbox" name="layer" id="WorldMap2" value="World_Map2">World Map2<br>
+      <input type="checkbox" name="layer" id="World_map2" value="World_map2">World map2<br>
+      <input type="checkbox" name="layer" id="earnings_map" value="earnings_map">earnings_map<br>
     </div>
   </div>
   <div id="popup" class="ol-popup">
